feat(processor): Add JsonToJson Processor
Signed-off-by: Yanting Tao <yanting@amazon.com>